--- a/ts/index.html
+++ b/ts/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="global.css">
 </head>
 <body>
+    <div id="score">Score : 0</div>
+    <button id='restart' onclick="restart()">Restart</button>
+    <button id='restart' class="pause" style="margin-left: 5%;" onclick="stop()">Pause</button>
     <canvas id='tetris'></canvas>
+    <canvas id='tetris-block' hidden></canvas>
 </body>
     <script src="config.js"></script>
     <script src="playground.js"></script>
